--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     display: none;
 } 
 
+
+
 .projects, .contact{
     margin-top: -10rem;
 }
@@ -43,9 +45,7 @@ p {
     font-size: 1.6rem;
 }
 
-/* ================= all heading ================= */
-
-
+/* ================= all heading lines ================= */
 .line {
     margin: auto auto;
     margin-top: -4.5rem;
@@ -54,7 +54,52 @@ p {
     height: 0.01rem;
     background-color: var(--border-color);
 }
-
+/* ================= spinner ================= */
+.spin-parent {
+    background-color: var(--background-light-color);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1000000000000;
+    display: block;
+}
+.load-text {
+    color: black;
+    padding-top: 6rem;
+    font-size: 1.5rem;
+}
+.new-spinner {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    margin: 20rem auto;
+  }
+  .new-spinner .ring {
+    position: absolute;
+    border: 8px solid black;
+    opacity: 1;
+    border-radius: 50%;
+    animation: new-spin 1s cubic-bezier(0, 0.5, 0, 1) infinite;
+  }
+  .new-spinner .ring:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  @keyframes new-spin {
+    0% {
+      top: 28px;
+      left: 28px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: -1px;
+      left: -1px;
+      width: 58px;
+      height: 58px;
+      opacity: 0;
+    }
+  }
 /* ================= nav bar ================= */
 nav {
     position:sticky;
@@ -113,6 +158,7 @@ nav ul {
 #menu-icon {
     font-size: 3.6rem;
     line-height: 7rem;
+    margin-top: -0.4rem;
     margin-right: 2rem;
     float: right;
     display: none;
@@ -225,7 +271,7 @@ span {
 
 }
 #ic {
-    /* color: var(--border-color); */
+    color: var(--border-color);
     margin-top: 2rem;
     margin-bottom: 0.7rem;
     font-size: 7rem;
@@ -252,7 +298,6 @@ span {
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     padding: 1rem auto;
-    /* color: var(--font-color); */
 }
 
 .btn {
@@ -456,7 +501,6 @@ input:-webkit-autofill:active {
     margin: 0.7rem auto;
     box-sizing: border-box;
     outline: none;
-    /* color: var(--font-color); */
     font-size: 1.4rem;
     border-radius: 0.5rem;
     border: 0.2rem solid var(--box-border-color);
@@ -697,24 +741,26 @@ input:-webkit-autofill:active {
         height: 2.3rem;
         margin: 1.5rem 0 auto 2.5rem;
     }
-    #menu-icon, #exit-icon {
+    #menu-icon {
         display: block;
-    }
-    .dark-mode {
-        margin-top: 2rem;
-        margin-right: 2rem;
     }
     #exit-icon {
         padding-top: 3rem;
     }
+    #exit-icon.active {
+        display: block;
+    }
+    .nav-menu.active {
+        display: block;
+     }
     .nav-menu {
         position:fixed;
         width: 100%;
         height: 110%;
         top: -8rem; 
         left: 0rem;
-        padding-top: 15rem;
         display: none;
+        padding-top: 15rem;
         background-color: var(--nav-menu-background);
     }
     .nav-link {
@@ -725,9 +771,7 @@ input:-webkit-autofill:active {
         text-align: center;
     }
   
-    .nav-menu.active {
-        display: block;
-     }
+   
      #exit-icon {
         margin-bottom: -10rem;
      }
@@ -811,6 +855,47 @@ input:-webkit-autofill:active {
     .logo {
         margin: 1.7rem 0 auto 2rem;
     }
+    /* #menu-icon {
+        display: block;
+    }
+    #exit-icon {
+        padding-top: 3rem;
+    }
+    #exit-icon.active {
+        display: block;
+    }
+    .nav-menu.active {
+        display: block;
+     }
+    .nav-menu {
+        position:fixed;
+        width: 100%;
+        height: 110%;
+        top: -8rem; 
+        left: 0rem;
+        display: none;
+        padding-top: 15rem;
+        background-color: var(--nav-menu-background);
+    }
+    .nav-link {
+        margin: 2rem;
+        transition: transform 0.3s ease;
+        display: block;
+        padding: 2.5rem;
+        text-align: center;
+    }
+  
+   
+     #exit-icon {
+        margin-bottom: -10rem;
+     }
+   
+     .nav-link:hover::before {
+        width: 0;
+    }
+     .nav-link.hover, .nav-link.active {
+        color:var(--border-color);
+    } */
     .main-intro {
         width: 100%;
         margin-top: -12rem;
